--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ li a:hover {
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#about">About</a>Hi I'm chinmay Pai, I generally like geeky stuff and want to learn more regarding computers.</li>
 </ul>
 <h1 style="text-align: center;"><strong>MY Website</strong></h1>
 <p style="text-align: center;"><strong><img src="Pictures/yadas.webp" alt="" width="120" height="150" /></strong></p>
