--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ li a:hover {
   <li><a href="#about">About</a>Hi I'm chinmay Pai, I generally like geeky stuff and want to learn more regarding computers.</li>
 </ul>
 <h1 style="text-align: center;"><strong>MY Website</strong></h1>
-<p style="text-align: center;"><strong><img src="Pictures/yadas.webp" alt="" width="120" height="150" /></strong></p>
+<p style="text-align: center;"><strong><img src="yadas.webp" alt="" width="120" height="150" /></strong></p>
 <h1 style="text-align: center;"><span style="color: #ff0000;"><strong>Chinmay Pai </strong></span></h1>
 <p style="text-align: center;"><strong> Artist@christUni </strong></p>
 <p style="text-align: center;"><strong>Department of Theatre Studies </strong></p>
