--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ li a:hover {
 <p style="text-align: center;"><strong> Artist@christUni </strong></p>
 <p style="text-align: center;"><strong>Department of Theatre Studies </strong></p>
 <p style="text-align: center;"><strong>CHRIST (Deemed to be University), Bengaluru</strong></p>
-<p> style="text-align: center;"><strong> Hemlo welcome to my website, I'm an unpaid artist meaning normal artist. So my elder sister in doing PHD in Proteonomics and genomics at IIT bombay.</p>
+<p> style="text-align: center;"><strong> Hemlo welcome to my website, I'm an unpaid artist meaning normal artist. So my elder sister in doing PHD in Proteonomics and genomics at IIT bombay./strong></p>
 </body>
 </html>
